[gd_scene load_steps=12 format=3 uid="uid://w0sg5uafa3wp"]

[ext_resource type="Texture2D" uid="uid://b4jrmevk1an3d" path="res://addons/ui-anim-framework/gui/icons/add_icon_icon.png" id="1_7ct6t"]
[ext_resource type="Script" path="res://addons/ui-anim-framework/gui/components/animations/animations_file_explorer.gd" id="1_lpdgh"]
[ext_resource type="Texture2D" uid="uid://0rqjg1weco5m" path="res://addons/ui-anim-framework/gui/icons/folder_icon.png" id="2_8v1p0"]
[ext_resource type="Texture2D" uid="uid://q400fytg18th" path="res://addons/ui-anim-framework/gui/icons/rename_icon_icon.png" id="3_wusma"]
[ext_resource type="Texture2D" uid="uid://jg2sm6ncraoe" path="res://addons/ui-anim-framework/gui/icons/delete_icon_icon.png" id="4_u5yoi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h5ekd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sipbg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iks6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doqib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qg7np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0k382"]

[node name="FileExplorer" type="MarginContainer"]
theme_override_constants/margin_left = 4
script = ExtResource("1_lpdgh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="FilesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Files"
vertical_alignment = 1

[node name="FileExplorerTree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_h5ekd")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Seperator" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FileAddButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("1_7ct6t")

[node name="FileAddFolderButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("2_8v1p0")

[node name="FileRenameButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("3_wusma")

[node name="FileDeleteButton" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_sipbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iks6r")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_doqib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qg7np")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0k382")
icon = ExtResource("4_u5yoi")

[connection signal="item_selected" from="VBoxContainer/FileExplorerTree" to="." method="_on_file_explorer_tree_item_selected"]
